--- a/archive.html
+++ b/archive.html
@@ -44,6 +44,8 @@
                     
                 <li class="active"><a href="#">归档</a>
                 </li><li><a href="categories/index.html">标签</a>
+                </li><li><a href="galleries/index.html">图集</a>
+                </li><li><a href="galleries/index.html">关于作者</a>
                 </li><li><a href="rss.xml">RSS</a>
 
                 </li></ul>
@@ -77,7 +79,7 @@
     <!--End of body content-->
 </div>
 <div class="footerbox">
-    Contents © 2013         <a href="mailto:chengximing1989@gmail.com">程光曦微</a> - Powered by         <a href="http://getnikola.com">Nikola</a>         
+    Contents © 2014         <a href="mailto:chengximing1989@gmail.com">程光曦微</a> - Powered by         <a href="http://getnikola.com">Nikola</a>         
 </div>
 
             <script src="assets/js/jquery-1.10.2.min.js" type="text/javascript"></script>
