--- a/galleries/index.html
+++ b/galleries/index.html
@@ -81,12 +81,43 @@
     <ul>
         <li><a href="HEVC-CU"><i class="icon-folder-open"></i> HEVC-CU</a></li>
         <li><a href="memory-leak"><i class="icon-folder-open"></i> memory-leak</a></li>
+        <li><a href="wxWidgets-UI"><i class="icon-folder-open"></i> wxWidgets-UI</a></li>
     </ul>
 
     <div id="gallery_container"></div>
     <noscript>
     <ul class="thumbnails">
-    </ul>
+            <li><a href="1.jpg" class="thumbnail image-reference" title="">
+                <img src="1.thumbnail.jpg" alt=""></a>
+            </li><li><a href="2.jpg" class="thumbnail image-reference" title="">
+                <img src="2.thumbnail.jpg" alt=""></a>
+            </li><li><a href="3.jpg" class="thumbnail image-reference" title="">
+                <img src="3.thumbnail.jpg" alt=""></a>
+            </li><li><a href="4.jpg" class="thumbnail image-reference" title="">
+                <img src="4.thumbnail.jpg" alt=""></a>
+            </li><li><a href="5.jpg" class="thumbnail image-reference" title="">
+                <img src="5.thumbnail.jpg" alt=""></a>
+            </li><li><a href="6.jpg" class="thumbnail image-reference" title="">
+                <img src="6.thumbnail.jpg" alt=""></a>
+            </li><li><a href="7.jpg" class="thumbnail image-reference" title="">
+                <img src="7.thumbnail.jpg" alt=""></a>
+            </li><li><a href="8.jpg" class="thumbnail image-reference" title="">
+                <img src="8.thumbnail.jpg" alt=""></a>
+            </li><li><a href="9.jpg" class="thumbnail image-reference" title="">
+                <img src="9.thumbnail.jpg" alt=""></a>
+            </li><li><a href="10.jpg" class="thumbnail image-reference" title="0">
+                <img src="10.thumbnail.jpg" alt="0"></a>
+            </li><li><a href="11.jpg" class="thumbnail image-reference" title="1">
+                <img src="11.thumbnail.jpg" alt="1"></a>
+            </li><li><a href="12.jpg" class="thumbnail image-reference" title="2">
+                <img src="12.thumbnail.jpg" alt="2"></a>
+            </li><li><a href="13.jpg" class="thumbnail image-reference" title="3">
+                <img src="13.thumbnail.jpg" alt="3"></a>
+            </li><li><a href="14.jpg" class="thumbnail image-reference" title="4">
+                <img src="14.thumbnail.jpg" alt="4"></a>
+            </li><li><a href="15.jpg" class="thumbnail image-reference" title="5">
+                <img src="15.thumbnail.jpg" alt="5"></a>
+    </li></ul>
     </noscript>
 
     </div>
@@ -127,7 +158,7 @@
    
 <script src="../assets/js/flowr.plugin.js"></script>
 <script>
-jsonContent = [];
+jsonContent = [{"url": "1.jpg", "title": "", "size": {"h": 180, "w": 135}, "url_thumb": "1.thumbnail.jpg"}, {"url": "2.jpg", "title": "", "size": {"h": 180, "w": 145}, "url_thumb": "2.thumbnail.jpg"}, {"url": "3.jpg", "title": "", "size": {"h": 119, "w": 180}, "url_thumb": "3.thumbnail.jpg"}, {"url": "4.jpg", "title": "", "size": {"h": 180, "w": 142}, "url_thumb": "4.thumbnail.jpg"}, {"url": "5.jpg", "title": "", "size": {"h": 180, "w": 119}, "url_thumb": "5.thumbnail.jpg"}, {"url": "6.jpg", "title": "", "size": {"h": 180, "w": 130}, "url_thumb": "6.thumbnail.jpg"}, {"url": "7.jpg", "title": "", "size": {"h": 119, "w": 180}, "url_thumb": "7.thumbnail.jpg"}, {"url": "8.jpg", "title": "", "size": {"h": 119, "w": 180}, "url_thumb": "8.thumbnail.jpg"}, {"url": "9.jpg", "title": "", "size": {"h": 119, "w": 180}, "url_thumb": "9.thumbnail.jpg"}, {"url": "10.jpg", "title": "0", "size": {"h": 119, "w": 180}, "url_thumb": "10.thumbnail.jpg"}, {"url": "11.jpg", "title": "1", "size": {"h": 318, "w": 720}, "url_thumb": "11.thumbnail.jpg"}, {"url": "12.jpg", "title": "2", "size": {"h": 348, "w": 720}, "url_thumb": "12.thumbnail.jpg"}, {"url": "13.jpg", "title": "3", "size": {"h": 180, "w": 119}, "url_thumb": "13.thumbnail.jpg"}, {"url": "14.jpg", "title": "4", "size": {"h": 180, "w": 148}, "url_thumb": "14.thumbnail.jpg"}, {"url": "15.jpg", "title": "5", "size": {"h": 119, "w": 180}, "url_thumb": "15.thumbnail.jpg"}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
