--- a/galleries/index.html
+++ b/galleries/index.html
@@ -81,6 +81,7 @@
     <ul>
         <li><a href="HEVC-CU"><i class="icon-folder-open"></i> HEVC-CU</a></li>
         <li><a href="memory-leak"><i class="icon-folder-open"></i> memory-leak</a></li>
+        <li><a href="wxWidgets-Custom-UI"><i class="icon-folder-open"></i> wxWidgets-Custom-UI</a></li>
         <li><a href="wxWidgets-UI"><i class="icon-folder-open"></i> wxWidgets-UI</a></li>
     </ul>
 
